# SteamShortcutSync

./: Cargo.toml  README.md  SteamShortcutSync.service  install.sh
client/: Cargo.toml  README.md
client/src/: main.rs
daemon/: Cargo.toml  README.md
daemon/src/: lib.rs  main.rs
