[package]
name = "steam-shortcut-sync-client"
description = "Client to notify Steam Shortcut Sync daemon to run immediately"
version = "1.0.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/ImTheSquid/SteamShortcutSync"
homepage = "https://github.com/ImTheSquid/SteamShortcutSync"
categories = ["command-line-utilities"]
readme= "README.md"