[package]
name = "steam-shortcut-sync"
description = "Automatically synchronizes Steam shortcuts from a Flatpak install to the normal applications directory"
version = "1.0.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/ImTheSquid/SteamShortcutSync"
homepage = "https://github.com/ImTheSquid/SteamShortcutSync"
readme = "README.md"

[dependencies]
ctrlc="3.2.2"
notify="4.0.17"
walkdir="2.3.2"
lazy_static = "1.4.0"
regex = "1.5.6"